routing/cloudwatch.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cloudwatch-agent
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: cloudwatch-agent
  template:
    metadata:
      labels:
        name: cloudwatch-agent
    spec:
      containers:
      - name: cloudwatch-agent
        image: amazon/cloudwatch-agent:latest
        volumeMounts:
        - name: config
          mountPath: /etc/cloudwatch-agent
      volumes:
      - name: config
        configMap:
          name: cloudwatch-agent-config
