routing/ingressnginx.yml
# Requesting for letsencrypt cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qr-app-ingress
  namespace: qr-app
  labels:
    app: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true" 
spec:
  ingressClassName: nginx
  rules:
  - host: qr.sapphireaura.com.ng
    http:
      paths:
      - pathType: Prefix #ImplementationSpecific
        path:   /api(/|$)(.*) #/api/generate-qr/ 
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 3000

  tls:
  - hosts:
      - qr.sapphireaura.com.ng
    secretName: qr-cert-tls
